[package]
name = "msp430fr6972"
version = "0.1.0"
authors = ["chrismolli <molliere.c@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.1.0"
msp430 = "0.2.2"
vcell = "0.1.3"

[dependencies.msp430-rt]
optional = true
version = "0.1.0"

[features]
rt = ["msp430-rt/device"]
