[package]
name = "msp430fr6972"
version = "0.1.0"
authors = ["chrismolli <molliere.c@gmail.com>"]
edition = "2018"
description = "PAC for MSP430FR6972"
license = "MIT"
homepage = "https://github.com/chrismolli/msp430fr6972"
documentation = "https://github.com/chrismolli/msp430fr6972"
repository = "https://github.com/chrismolli/msp430fr6972"
readme = "README.md"
exclude = [
  "svd/*"
]

[dependencies]
bare-metal = "0.2.0"
msp430 = "0.2.4"
vcell = "0.1.2"

[dependencies.msp430-rt]
optional = true
version = "0.2.4"

[features]
rt = ["msp430-rt/device"]
